# ksy_test

./: CMakeLists.txt  FindKS_CPP.cmake  README.md  ToDo
data/: data.json  examp0_teltonika.txt  examples_teltonika_logs.txt  teltonika_examp1.txt
include/: version.hpp
src/: CMakeLists.txt  dump2hex.cpp  main.cpp  teltonica.ksy  teltonica_extended.ksy  version.cpp.in
